# number_word_sound_translator

./: .gitignore  Cargo.toml  letter_number_pairs  readme.txt
src/: cmu_parser.rs  cmu_translator.rs  main.rs  nst_parser.rs  number_word_translator.rs  symbol_maps.rs  util.rs  wiktionary.rs
src/trygvejw/: utils.rs
src/wiktionary/: segment_structs.rs
