[package]
name = "number_word_sound_translator"
version = "0.1.0"
authors = ["trygve <trygve.woldseth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"
unicode-segmentation = "1.7.1"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"